# SIMD-Sobel-Gaussian-Filtering

./: README.md
src/: CMakeLists.txt  main.cpp  sobellib.cpp  sobellib.h
